--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/pt_br.json
@@ -68,7 +68,9 @@
   "text.rei.cheat_items": "{player_name} recebeu {item_count} unidade(s) de [{item_name}§f].",
   "text.rei.failed_cheat_items": "§cFalha ao obter itens.",
   "text.rei.too_long_nbt": "§cO NBT do item é longo demais para ser aplicado ao modo multijogador.",
+  "text.rei.accepts": "Aceita:",
   "text.rei.performance": "Análise de desempenho",
+  "text.rei.addons": "Complementos do REI",
   "text.rei.shapeless": "Sem forma",
   "ordering.rei.ascending": "Crescente",
   "ordering.rei.descending": "Descrescente",
@@ -84,6 +86,7 @@
   "error.rei.internal.error": "Erro interno: %s",
   "error.rei.recipe.not.unlocked": "Receita inacessível no livro.",
   "error.rei.not.supported.move.items": "Não é possível mover itens com essa receita e contêiner.",
+  "text.rei.save.recipes": "Salve a receita com %s.",
   "error.rei.no.handlers.applicable": "Processo indisponível.",
   "error.rei.multi.errors": "Vários erros:",
   "rei.rei.no.slot.in.inv": "Espaço insuficiente no inventário.",
@@ -129,6 +132,8 @@
   "text.rei.remove_favorites_tooltip": " \n§7Pressione %s para remover dos favoritos.",
   "text.rei.working_station": "Bancada",
   "text.rei.release_export": "Solte %s para exportar",
+  "text.rei.ask_to_export": "Deseja exportar \"%s\"?",
+  "text.rei.ask_to_export.subtitle": "%d será exportado como imagens.",
   "text.rei.recipe_id": "\n%sID: %s",
   "text.rei.recipe_screen_type.selection": "Selecionar estilo da tela de receita",
   "text.rei.recipe_screen_type.selection.sub": "Você sempre pode editar essa opção no menu de ajustes.",
@@ -150,7 +155,6 @@
   "text.rei.changelog.error.failedToReadChangelogFile": "Falha ao ler o log!",
   "favorite.section.gamemode": "Modo de jogo",
   "favorite.section.weather": "Tempo",
-  "favorite.section.time": "Tempo",
   "tooltip.rei.fluid_amount": "§7%d unidade(s)",
   "tooltip.rei.fluid_amount.forge": "§7%d mB",
   "tooltip.rei.drag_to_add_favorites": "§7Arraste até aqui para adicionar aos favoritos!",
@@ -220,7 +224,6 @@
   "config.roughlyenoughitems.search.asyncSearch": "Pesquisa assíncrona:",
   "config.roughlyenoughitems.search.asyncSearchPartitionSize": "Tamanho de partição da pesquisa assíncrona:",
   "config.roughlyenoughitems.accessibility.useCompactTabs": "Guias compactas:",
-  "config.roughlyenoughitems.accessibility.useCompactTabButtons": "Botões de guias compactas:",
   "config.roughlyenoughitems.theme": "Tema:",
   "config.roughlyenoughitems.theme.dark": "Escuro",
   "config.roughlyenoughitems.theme.light": "Claro",
@@ -258,6 +261,7 @@
   "config.roughlyenoughitems.leftSideMobEffects.boolean.false": "Direita (padrão)",
   "config.roughlyenoughitems.fixTabCloseContainer": "Corrigir contêiner de guias padrão (livro de receitas desativado):",
   "config.roughlyenoughitems.lighterButtonHover": "Cursor mínimo do botão:",
+  "config.roughlyenoughitems.layout.showCraftableOnlyButton": "Fabricáveis:",
   "config.roughlyenoughitems.layout.showUtilsButtons": "Botões utilitários:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "Comando do modo de jogo:",
   "config.roughlyenoughitems.commands.giveCommand": "Comando \"give\":",
@@ -303,6 +307,7 @@
   "config.roughlyenoughitems.filteringRulesScreen": "Regras de filtros personalizados",
   "config.roughlyenoughitems.filteringRulesScreen.new": "Criar regra para filtro",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "Excluir",
+  "config.roughlyenoughitems.filteringRulesScreen.hint": "Tente arrastar!",
   "rule.roughlyenoughitems.filtering.manual": "Filtro manual",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "Selecionar manualmente o que ocultar e mostrar.",
   "rule.roughlyenoughitems.filtering.search": "Filtro de busca",
