--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_cn.json
@@ -68,7 +68,9 @@
   "text.rei.cheat_items": "已将 {item_count} 个 [{item_name}§f] 给予 {player_name}",
   "text.rei.failed_cheat_items": "§c物品给予失败",
   "text.rei.too_long_nbt": "§c物品 NBT 太长，不能应用于多人游戏.",
+  "text.rei.accepts": "接受以下内容:",
   "text.rei.tag_accept": "标签：#%s",
+  "text.rei.missing": "缺少以下内容：",
   "text.rei.performance": "性能分析",
   "text.rei.addons": "REI 插件",
   "text.rei.shapeless": "无序合成",
@@ -134,6 +136,7 @@
   "text.rei.working_station": "工作站",
   "text.rei.release_export": "释放 %s 以导出此配方",
   "text.rei.ask_to_export": "您是否想继续导出 %s ？",
+  "text.rei.ask_to_export.subtitle": "这将导出%d显示为图像。",
   "text.rei.recipe_id": "\n%s配方 ID: %s",
   "text.rei.recipe_screen_type.selection": "合成界面样式选择",
   "text.rei.recipe_screen_type.selection.sub": "你随时可以通过配置界面再次编辑此设置.",
@@ -267,6 +270,7 @@
   "config.roughlyenoughitems.layout.showUtilsButtons": "工具按钮:",
   "config.roughlyenoughitems.commands.gamemodeCommand": "游戏模式命令：",
   "config.roughlyenoughitems.commands.giveCommand": "作弊命令:",
+  "config.roughlyenoughitems.commands.timeCommand": "时间命令：",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "加载默认插件：",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§c禁用 (危险)",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI 加载线程：",
@@ -309,6 +313,7 @@
   "config.roughlyenoughitems.filteringRulesScreen": "自定义过滤规则",
   "config.roughlyenoughitems.filteringRulesScreen.new": "创建过滤规则",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "删除",
+  "config.roughlyenoughitems.filteringRulesScreen.hint": "尝试拖拽！",
   "rule.roughlyenoughitems.filtering.manual": "手动过滤",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "手动选择要隐藏和显示的内容。",
   "rule.roughlyenoughitems.filtering.search": "搜索筛选器",
