--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/zh_tw.json
@@ -70,6 +70,7 @@
   "text.rei.too_long_nbt": "§c物品 NBT 過長，不適用於多人遊戲。",
   "text.rei.accepts": "接受以下物品:",
   "text.rei.tag_accept": "標籤: #%s",
+  "text.rei.missing": "缺失以下物品:",
   "text.rei.performance": "效能分析",
   "text.rei.addons": "REI 附加功能",
   "text.rei.shapeless": "無序合成",
@@ -135,6 +136,7 @@
   "text.rei.working_station": "工作台",
   "text.rei.release_export": "釋放 %s 以匯出",
   "text.rei.ask_to_export": "您是否打算繼續匯出 %s ？",
+  "text.rei.ask_to_export.subtitle": "這將匯出%d個配方為圖像檔。",
   "text.rei.recipe_id": "\n%s配方識別碼： %s",
   "text.rei.recipe_screen_type.selection": "配方畫面類型選擇",
   "text.rei.recipe_screen_type.selection.sub": "你隨時可以在設定頁面中再次改變這個選項。",
@@ -268,6 +270,7 @@
   "config.roughlyenoughitems.layout.showUtilsButtons": "功能按鈕：",
   "config.roughlyenoughitems.commands.gamemodeCommand": "改變遊戲模式的指令：",
   "config.roughlyenoughitems.commands.giveCommand": "給予物品的指令：",
+  "config.roughlyenoughitems.commands.timeCommand": "改變時間的指令：",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin": "載入預設插件：",
   "config.roughlyenoughitems.miscellaneous.loadDefaultPlugin.boolean.false": "§c否 (危險)",
   "config.roughlyenoughitems.miscellaneous.registerRecipesInAnotherThread": "REI 重載線程：",
@@ -310,6 +313,7 @@
   "config.roughlyenoughitems.filteringRulesScreen": "自訂篩選條件",
   "config.roughlyenoughitems.filteringRulesScreen.new": "建立篩選規則",
   "config.roughlyenoughitems.filteringRulesScreen.delete": "刪除",
+  "config.roughlyenoughitems.filteringRulesScreen.hint": "請嘗試拖拽！",
   "rule.roughlyenoughitems.filtering.manual": "手動篩選",
   "rule.roughlyenoughitems.filtering.manual.subtitle": "手動選擇哪些要顯示或隱藏。",
   "rule.roughlyenoughitems.filtering.search": "關鍵字篩選",
