Finish Collapsible Entries Visuals

--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -156,6 +156,9 @@
   "text.rei.changelog.title": "REI Changelog",
   "text.rei.changelog.error.missingChangelogFile": "Missing changelog File!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Failed to read changelog File!",
+  "text.rei.collapsed.entry": "Collapsed Entry: %s",
+  "text.rei.collapsed.entry.hint.expand": "Click to expand all %s (%d entries)",
+  "text.rei.collapsed.entry.hint.collapse": "Click to collapse all %s (%d entries)",
   "favorite.section.gamemode": "Game Mode",
   "favorite.section.weather": "Weather",
   "favorite.section.time": "Time",
