--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -60,6 +60,7 @@
   "category.rei.wax_scraping": "Wax Scraping",
   "category.rei.oxidizing": "Oxidizing",
   "category.rei.oxidation_scraping": "Oxidation Scraping",
+  "category.rei.tag": "Tag",
   "category.rei.information": "Information",
   "text.rei.composting.chance": "§e%d%% Chance",
   "text.rei.composting.page": "Page %d",
@@ -82,6 +83,8 @@
   "text.auto_craft.move_items": "Move Items",
   "text.auto_craft.move_items.tooltip": "Ctrl-Click to Quick Craft",
   "text.auto_craft.move_items.yog": "Generate NullPointerException!!",
+  "text.rei.expand.view": "Open Expanded View",
+  "text.rei.tag.copy.clipboard": "Save Tag Tree to clipboard",
   "error.rei.transfer.too_small": "Unable to move items to a %dx%d grid.",
   "error.rei.not.on.server": "REI is not on the server.",
   "error.rei.not.enough.materials": "Not enough materials.",
