--- a/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
+++ b/runtime/src/main/resources/assets/roughlyenoughitems/lang/en_us.json
@@ -176,8 +176,10 @@
   "text.rei.changelog.error.missingChangelogFile": "Missing changelog File!",
   "text.rei.changelog.error.failedToReadChangelogFile": "Failed to read changelog File!",
   "text.rei.collapsed.entry": "Collapsed Entry: %s",
-  "text.rei.collapsed.entry.hint.expand": "Click to expand all %s (%d entries)",
-  "text.rei.collapsed.entry.hint.collapse": "Click to collapse all %s (%d entries)",
+  "text.rei.collapsed.entry.hint.expand": "Alt-Click to expand all %s (%d entries)",
+  "text.rei.collapsed.entry.hint.expand.macos": "Option-Click to expand all %s (%d entries)",
+  "text.rei.collapsed.entry.hint.collapse": "Alt-Click to collapse all %s (%d entries)",
+  "text.rei.collapsed.entry.hint.collapse.macos": "Option-Click to collapse all %s (%d entries)",
   "favorite.section.gamemode": "Game Mode",
   "favorite.section.weather": "Weather",
   "favorite.section.time": "Time",
